fix: Fix "what we do" section text alignment
- Fix text alignment
- Edit hero page content
- Remove spaceholder logo

--- a/src/assets/sass/local.scss
+++ b/src/assets/sass/local.scss
@@ -10,6 +10,19 @@
         padding: var(--sectionPadding);
         background-color: #fafbfc;
 
+        .cs-topper {
+            text-align: center;
+        }
+
+        .cs-title {
+            text-align: center;
+            
+        }
+
+        .cs-text {
+            text-align: center;
+        }
+
         .cs-container {
             width: 100%;
             /* changes to 1280px at tablet */
@@ -19,7 +32,7 @@
             flex-direction: column;
             align-items: center;
             /* 48px - 64px */
-            gap: clamp(3rem, 6vw, 4rem);
+            // gap: clamp(3rem, 6vw, 4rem);
         }
 
         .cs-content {
@@ -35,6 +48,7 @@
         .cs-card-group {
             width: 100%;
             margin: 0;
+            margin-top: calc(40 / 16 * 1rem);
             padding: 0;
             display: flex;
             justify-content: center;
